# mysql_layer

./: Cargo.toml  README.md  starting_db.txt
env/: .env
src/: lib.rs  main.rs
src/cli/: arguments.rs  mod.rs
src/database/: dao.rs  db.rs  errors.rs  link.rs  mod.rs
src/db/: column.rs  db.rs  entry.rs  link.rs  mod.rs  table.rs
src/lambda/: lambda.rs  message.rs  message_trait.rs  mod.rs
src/lambda/funcionario/: add.rs  delete.rs  funcionario.rs  get.rs  list.rs  mod.rs  post.rs  put.rs
src/requests/: delete.rs  gateway.rs  get.rs  mod.rs  notimplemented.rs  post.rs  put.rs  request.rs  response.rs
