[package]
name = "mysql_layer"
version = "0.1.0"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
edition = "2018"

[[bin]]
name = "add"
test = false
bench = false

[[bin]]
name = "delete"
test = false
bench = false

[[bin]]
name = "get"
test = false
bench = false

[[bin]]
name = "db_setup"
test = false
bench = false

[[bin]]
name = "list"
test = false
bench = false

[[bin]]
name = "update"
test = false
bench = false

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["lib"]

# What the dependencies are for:
# mysql: database implemented for this project
# serde: used for serializing/deserializing data
# serde_json: same as above for json
# dotenv: accessing environment variables

[dependencies]
mysql = "20.1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
base64 = "0.13.0"


